--- a/所谓的恶俗圈到底是个什么圈子呢.md
+++ b/所谓的恶俗圈到底是个什么圈子呢.md
@@ -30,7 +30,7 @@
 
 后来有一名为董旭阳的反对黑明星人士写了一篇名为《百度十大恶俗贴吧，希望百度管理人员不能无视！》的文章，将黑明星（但不仅限于明星）的贴吧称之为“恶俗贴吧”，于是各大黑明星贴吧的吧友从此便自称“恶俗”，“恶俗”之名由此诞生。
 
-起初恶俗贴吧黑明星的主要手段是发表“高雅创作”（高雅创作可近似理解为黑人的作品），但矛头还是指向各大有名的公众人士，对普通网友的危害性并不算大。后来很多行星饭仗着人多肆无忌惮，随意跑到雷霆三巨头吧瞎骂，忍无可忍的吧友们终于开始实施人肉搜索，既“出道”，后来为防止被百度官方干烂，雷霆三巨头吧开辟了战场性质的罗玉凤吧，现代意义上的以出道迫害为主要手段之一的恶俗系正式形成。
+起初恶俗贴吧黑明星的主要手段是发表“高雅创作”（高雅创作可近似理解为黑人的作品），但矛头还是指向各大有名的公众人士，对普通网友的危害性并不算大。后来很多行星饭仗着人多肆无忌惮，随意跑到雷霆三巨头吧瞎骂，忍无可忍的吧友们终于开始实施人肉搜索，即“出道”，后来为防止被百度官方干烂，雷霆三巨头吧开辟了战场性质的罗玉凤吧，现代意义上的以出道迫害为主要手段之一的恶俗系正式形成。
 
 有必要一提的是，在这期间李毅吧逐渐转向了以盈利为主的网络垃圾堆，变成了恶俗系贴吧的主要敌人之一。
 
@@ -48,9 +48,9 @@
 
 第三个恶俗系大圈子为纳系，既“纳年纳兔纳些事吧”与“纳年纳兔纳些事儿吧”。在722事件中造成极大影响的便是这个贴吧。
 
-纳吧为“那年那兔那些事吧”的一些看不惯吧内风气的老人所创，你没看错，就是那个以爱国出名的兔吧。需要注意的是，这个吧建立之初主要讽刺的是兔吧会员，而非乳化。
+纳吧为“那年那兔那些事吧”的一些看不惯吧内风气的老人所创，你没看错，就是那个以爱国出名的兔吧。需要注意的是，这个吧建立之初主要讽刺的是兔吧会员，而非辱华。
 
-起初此吧的成员构成为自由派为主，托派毛派理智自干五等立场的人共存。讨论以郑智为主。后来随着左派普遍退出，变为以自由派为绝对主体的局面。
+起初此吧的成员构成为自由派为主，托派毛派理智自干五等立场的人共存。讨论以政治为主。后来随着左派普遍退出，变为以自由派为绝对主体的局面。
 
 直到此时纳吧其实都并没有与恶俗有过一丁点接触，但后来大量的低素质兔漫痴与小粉红涌入此吧，胡乱钦点，肆意谩骂。于是纳吧的风气开始浮躁，逐渐开始了网络暴力。
 
@@ -60,23 +60,23 @@
 
 除了辱骂外一无所能的兔漫痴与小粉红当然抵不住以出道为主的纳吧吧友的攻势，此时的纳吧以“粉红杀手”之名扬名在外，自然吸引了不少低美，日杂，逆民。这些人因与粉红敌对而选择来到纳吧，并逐渐成为了纳吧底层群众的构成部分。
 
-纳吧的管理层名义上是反对“针织黑”的（既逆民），也确实挂了几个针织黑杀鸡儆猴。但对针织黑的打压力度远比不上对粉红和兔漫痴的力度，因此针织黑仍然活跃在纳吧，直到722事件纳吧被官方干烂。
+纳吧的管理层名义上是反对“真支黑”的（既逆民），也确实挂了几个真支黑杀鸡儆猴。但对真支黑的打压力度远比不上对粉红和兔漫痴的力度，因此真支黑仍然活跃在纳吧，直到722事件纳吧被官方干烂。
 
 
 
 最后要说的是音mad相关圈子，与前三个圈子不同的是，音mad圈子早期活跃在qq群，并且是一个极其封闭的圈子。
 
-这个圈子是内斗最严重的一个圈子，不少人本是圈内人，却一瞬变为乐子，可谓是猎人变成了猎物。早期在某些人的盈利目的下，造成了音mad与鬼畜的dssq（dssq可理解为小圈子的亚文化在某些人的推波助澜下走进大众的视野，导致一无所知的大众对此亚文化产生曲解）
+这个圈子是内斗最严重的一个圈子，不少人本是圈内人，却一瞬变为乐子，可谓是猎人变成了猎物。早期在某些人的盈利目的下，造成了音mad与鬼畜的dssq（大势所趋dssq可理解为小圈子的亚文化在某些人的推波助澜下走进大众的视野，导致一无所知的大众对此亚文化产生曲解）
 
 虽然鬼畜dssq了，但音mad圈子却如同与其割裂，并未走入普罗大众的眼中。音mad圈开始为人熟知还是因为后来的恶俗维基。
 
 至于这个圈子为什么也恶俗化了？个人认为原因有三：
 
-1:音mad本身便具有迫害性质，很多人看了几个葛平的鬼畜视频以及葛平的真人互动，以为鬼畜区的观众，up，素材（既葛平，非凡哥等人）都应该其乐融融，然而早期的音mad基本包含很强的精神污染意味，可以说是对人的一种迫害。
+1. 音mad本身便具有迫害性质，很多人看了几个葛平的鬼畜视频以及葛平的真人互动，以为鬼畜区的观众，up，素材（既葛平，非凡哥等人）都应该其乐融融，然而早期的音mad基本包含很强的精神污染意味，可以说是对人的一种迫害。
 
-2:圈内部分人员本身就与恶俗系有重叠。
+2. 圈内部分人员本身就与恶俗系有重叠。
 
-3:圈内内斗极其严重，为恶俗化提供了存在与发展的动力。
+3. 圈内内斗极其严重，为恶俗化提供了存在与发展的动力。
 
 
 
@@ -214,13 +214,13 @@
 
 至于说跟外务省有联系的，我只能说脑子是个好东西。
 
-有人有疑问，恶俗维基都跟zn维基账号互通了，还不能证明恶俗人士都是逆民？
+有人有疑问，恶俗维基都跟支纳维基账号互通了，还不能证明恶俗人士都是逆民？
 
-很简单：zn维基也就是用zn这种词气粉红，口嗨罢了。事实上恶俗人士最不在意的就是称呼（这也能用我提到的解构主义与虚无主义完美解释），他们自己都自称“本废物”“本肥蛆”，你让一群管自己叫废物和肥蛆的人来给国家和民族避嫌，这不是搞笑吗？
+很简单：支纳维基也就是用支纳这种词气粉红，口嗨罢了。事实上恶俗人士最不在意的就是称呼（这也能用我提到的解构主义与虚无主义完美解释），他们自己都自称“本废物”“本肥蛆”，你让一群管自己叫废物和肥蛆的人来给国家和民族避嫌，这不是搞笑吗？
 
 恶俗系不少人的id就类似“鸢一折纸死妈”，“时崎狂三死妈”，难不成真让纸片人死妈？该当老婆舔时还不照样。
 
-因此zn维基用户本来就不是逆民，自由派和国际左占大多数，与恶俗维基人员构成差不多，互通账号不奇怪。
+因此支纳维基用户本来就不是逆民，自由派和国际左占大多数，与恶俗维基人员构成差不多，互通账号不奇怪。
 
 
 
